objects/Beta__c/Beta__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track Beta Customer Orders</description>
    <label>Beta Customer</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Beta Customer Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beta Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>