objects/Beta__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Formula field - Account Name that is related to the opportunity</description>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>