objects/Beta__c/fields/Evaluation_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Agreement__c</fullName>
    <description>Status of Evaluation Agreement</description>
    <label>Evaluation Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Needs Revised</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>