objects/Beta__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up to the user object to store the sales engineer</description>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beta_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>