objects/Beta__c/fields/Service_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Form__c</fullName>
    <description>Status of service order form</description>
    <label>Service Order Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Needs Revised</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>