objects/Beta__c/fields/Tech_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sheet__c</fullName>
    <description>status of Tech Sheet</description>
    <label>Tech Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Needs Revised</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>